package experimot.msgs;

/// \ingroup experimot_msgs
/// \interface Joint Value map 
/// \brief Message for a Joint value


//message JointValueMap
//{
//  required map<int32,double> map_field  = 1;
//}

message JointValue{
	required int32 id = 1;
	required double value = 2;
}

message JointValueVector{
	repeated JointValue JointValues = 1;
}