package experimot.msgs;

/// \ingroup experimot_msgs
/// \interface Joint 
/// \brief Message for creating KinectJoint

import "vector3d.proto";
import "quaternion.proto";

/**
 * Represents the Kinect skeleton joint data.
 */
message KinectJoint
{
    /**
     * Represents the skeleton joint tracking state.
     */
	enum TrackingState
	{
		NotTracked = 0;       ////     The joint data is not tracked and no data is known about this joint.
		Inferred = 1;         ////     The joint data is inferred and confidence in the position data is lower than
                              ////     if it were Tracked.
		Tracked = 2;          ////     The joint data is being tracked and the data can be trusted.
	}

    /**
     * Represents the types of joints of a Body.
     */
    enum JointType
    {

        SpineBase = 0;         ///     Base of the spine.
        SpineMid = 1;          ///     Middle of the spine.
        Neck = 2;              ///     Neck.
        Head = 3;              ///     Head.
        ShoulderLeft = 4;      ///     Left shoulder.
        ElbowLeft = 5;         ///     Left elbow.
        WristLeft = 6;         ///     Left wrist.
        HandLeft = 7;          ///     Left hand.
        ShoulderRight = 8;     ///     Right shoulder.
        ElbowRight = 9;        ///     Right elbow.
        WristRight = 10;       ///     Right wrist.
        HandRight = 11;        ///     Right hand.
        HipLeft = 12;          ///     Left hip.
        KneeLeft = 13;         ///     Left knee.
        AnkleLeft = 14;        ///     Left ankle.
        FootLeft = 15;         ///     Left foot.
        HipRight = 16;         ///     Right hip.
        KneeRight = 17;        ///     Right knee.
        AnkleRight = 18;       ///     Right ankle.
        FootRight = 19;        ///     Right foot.
        SpineShoulder = 20;    ///     Between the shoulders on the spine.
        HandTipLeft = 21;      ///     Tip of the left hand.
        ThumbLeft = 22;        ///     Left thumb.
        HandTipRight = 23;     ///     Tip of the right hand.
        ThumbRight = 24;       ///     Right thumb.
    }

	required JointType Type						=   1;                        /// Type of skeleton joint
	required TrackingState State				=	2;                        /// Tracking state of the joint
	required Vector3d Position					=	3;                        /// 3D position of the joint
	required Quaternion Orientation				=	4;                        /// 3D orientation of the joint
	optional float Angle						=   5 [default = -1000];      /// Angle at the joint
}